networking/istio/istio-request-manuplation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-route
spec:
  hosts:
  - nginx-svc.application.svc.cluster.local
  http:
  - name: "reviews-v2-routes"
    match:
    - uri:
        prefix: "/wpcatalog"
    - uri:
        prefix: "/consumercatalog"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: nginx-svc.application.svc.cluster.local
        port:
          number: 80
  - name: "reviews-v1-route"
    route:
    - destination:
        host: nginx-svc.application.svc.cluster.local
        port:
          number: 80
      headers:
        request:
          set:
            x-forwarded-for: 10.12.3.5
